# bsv-edutask

./: .gitignore  README.md  cypress.config.js  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: backend-test.yaml  backend-tests.yml  backend-unit-tests.yml  backend_tests.yml  docker-image.yml  main.yml  pytest.yml  python-app.yml  python-tests.yml  tests.yml
backend/: .env  main.py  pytest.ini
backend/src/blueprints/: taskblueprint.py  userblueprint.py
backend/src/controllers/: usercontroller.py
backend/src/util/: helpers.py  validators.py
backend/test/: conftest.py  test_dao.py  test_dao_create_integration.py  test_dao_integration.py  test_get_user_by_email.py  test_usercontroller.py
backend/test/assignmenttest/: test_assignment2.py
backend/test/demo/: test_dao.py  test_get_user_by_email.py  test_hasAttribute.py  test_impure.py  test_integration_doa.py  test_namespaces.py  test_patch.py  test_usercontroller.py  test_validateAge.py
backend/test/integration/: test_dao.py  test_dao_create.py  test_dao_create_it.py  test_dao_integration.py  test_mongoCreate.py  test_task_dao.py
backend/test/tests/: test_dao_create.py  test_usercontroller.py
backend/tests/: test_dao.py  test_usercontroller.py
cypress/e2e/: bsv.cy.js  login.cy.js  spec.cy.js  todo.cy.js  todo_spec.cy.js
cypress/fixtures/: example.json  task.json  userdata.json
cypress/support/: commands.js
frontend/: Makefile  cypress.config.js  package-lock.json
lab1/: assignment1.md  assignment2.md  assignment3.md
(+39 files in other folders)
